results/SpecGenBench/conversational/log-MatrixAdd-2023_11_28_03_32_15.txt
public class MatrixAdd {
    //@ requires a.length == 2 && b.length == 2;
    //@ requires a[0].length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j];
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }
}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:10: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_407_407___34 i_407_421___37
1 error

public class MatrixAdd {
    //@ requires a.length == 2 && b.length == 2;
    //@ requires a[0].length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j];
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        //@ maintaining 0 <= i && i <= 2;
        //@ maintaining (\forall int x; 0 <= x && x < i; (\forall int j; 0 <= j && j < 2; c[x][j] == a[x][j] + b[x][j]));
        //@ decreases 2 - i;
        for (int i = 0; i < 2; i++) {
            //@ maintaining 0 <= j && j <= 2;
            //@ maintaining (\forall int y; 0 <= y && y < j; c[i][y] == a[i][y] + b[i][y]);
            //@ decreases 2 - j;
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }
}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:16: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_600_600___33 i_600_614___39
1 error

public class MatrixAdd {
    //@ requires a.length == 2 && b.length == 2;
    //@ requires a[0].length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j];
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        //@ maintaining 0 <= i && i <= 2;
        //@ maintaining (\forall int x; 0 <= x && x < i; (\forall int j; 0 <= j && j < 2; c[x][j] == a[x][j] + b[x][j]));
        //@ decreases 2 - i;
        for (int i = 0; i < 2; i++) {
            //@ maintaining 0 <= j && j <= 2;
            //@ maintaining (\forall int y; 0 <= y && y < j; c[i][y] == a[i][y] + b[i][y]);
            //@ decreases 2 - j;
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }
}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:16: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_600_600___33 i_600_614___39
1 error

